--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start:dev": "nodemon index.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
