--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "mime-types": "^2.1.35",
     "mongoose": "^6.5.4",
     "ms": "^2.0.0",
-    "negotiator": "^0.6.3"
+    "negotiator": "^0.6.3",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.5.0"
   },
   "devDependencies": {},
   "scripts": {
