--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "and": "0.0.3",
     "bytes": "^3.1.2",
     "call-bind": "^1.0.2",
     "content-type": "^1.0.4",
@@ -17,6 +18,7 @@
     "escape-html": "^1.0.3",
     "etag": "^1.8.1",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
     "express-validator": "^6.14.2",
     "forwarded": "^0.2.0",
     "fresh": "^0.5.2",
@@ -33,8 +35,10 @@
     "mongoose": "^6.5.4",
     "ms": "^2.0.0",
     "negotiator": "^0.6.3",
+    "swagger-autogen": "^2.21.5",
     "swagger-jsdoc": "^6.2.5",
-    "swagger-ui-express": "^4.5.0"
+    "swagger-ui-express": "^4.5.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {},
   "scripts": {
