--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "and": "0.0.3",
     "bytes": "^3.1.2",
     "call-bind": "^1.0.2",
+    "cloudinary": "^1.31.0",
     "content-type": "^1.0.4",
     "cors": "^2.8.5",
     "debug": "^2.6.9",
